# paludis-gentoo-patches

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitreview  .mailmap  AUTHORS  CMakeLists.txt  CODING_STANDARDS  Makefile.am  NEWS  README  README.md  TODO  autogen.bash  autotools_prepare.bash  configure.ac
bash-completion/: Makefile.am  accerso  adjutrix  cave  contrarius  importare  inquisitio  instruo  paludis  qualudis  reconcilio
doc/: CMakeLists.txt  HOWTO.rst  HOWTO.txt  Makefile.am  authors.html.skel  cachefiles.html.skel  changelog.html.part.in  changelog.html.skel  configuration.html.skel  create_ruby_doc.rb  doc_authors.doxygen  doc_bootstrap_howto.doxygen  doc_cache_files.doxygen  doc_changelog.doxygen  doc_coding_standards.doxygen  doc_configuration_files.doxygen  doc_directories.doxygen  doc_known_issues.doxygen  doc_licence.doxygen  doc_main.doxygen  doc_mainpage.doxygen  doc_migration_howto.doxygen  doc_namespaces.doxygen  doc_news.doxygen  doc_portage_differences.doxygen  doc_programming_with_paludis.doxygen  doc_references.doxygen  doc_security_advisories.doxygen  doxygen.conf.in  faq.html.skel  fetchers.html.skel  footer.html  footer.html.part.in  header.html  header.html.part.in  hooks.html.skel  htaccess  htmlfooter.html  htmlheader.html  htmltidy.bash  (+12 more)
ebuild/: Makefile.am  build_functions.bash  builtin_fetch.bash  builtin_fetch_bin.bash  builtin_init.bash  builtin_init_bin.bash  builtin_merge.bash  builtin_metadata.bash  builtin_strip.bash  builtin_tidyup.bash  builtin_unmerge.bash  builtin_unpack_bin.bash  builtin_updateenv.bash  builtin_variable.bash  depend.bash  ebuild.bash  echo_functions.bash  echo_functions.bash.in  echo_functions_TEST.bash  eclass_functions.bash  install_functions.bash  kernel_functions.bash  kernel_functions_TEST.bash  list_functions.bash  list_functions_TEST.bash  merge.cc  merge_TEST.bash  merge_TEST_setup.sh  merge_common.hh  multilib_functions.bash  pkg_config.bash  pkg_init.bash  pkg_nofetch.bash  pkg_postinst.bash  pkg_postrm.bash  pkg_preinst.bash  pkg_prerm.bash  pkg_setup.bash  portage_stubs.bash  sandbox.bash  (+12 more)
eselect/: Makefile.am  news.eselect  repo.eselect
hooks/: CMakeLists.txt  Makefile.am  Makefile.am.m4  cmake_install.cmake.in  eselect_env_update.bash  eselect_env_update.bash.in  eselect_env_update_TEST  eselect_env_update_TEST_cleanup.sh  eselect_env_update_TEST_setup.sh  find_config_updates.bash  find_config_updates.hook  fix_symlinks.bash  gnu_info_index.bash  installable_cache_regen.bash  installed_cache_regen.bash  log.bash  news.bash  news.hook  news.hook.in  news_TEST  news_TEST_cleanup.sh  news_TEST_setup.sh  paranoid_setuid_setgid.bash  rewrite_broken_symlinks.bash  run_test.bash  update_config_protect_list.bash  write_cache_clean.bash
misc/: Makefile.am  asciidoc.conf  common-makefile.am  do_m4.bash  generated-file.txt  make_nn.bash  make_se.bash  make_sr.bash  svn-version-filter-data.bash.in  svn-version-filter.bash
paludis/: CMakeLists.txt  Makefile.am.m4  about.hh.in  about_TEST.cc  about_metadata-fwd.hh  about_metadata.cc  about_metadata.hh  action-fwd.hh  action.cc  action.hh  action.se  action.sr  action_names-fwd.hh  action_names.cc  action_names.hh  additional_package_dep_spec_requirement-fwd.hh  additional_package_dep_spec_requirement.cc  additional_package_dep_spec_requirement.hh  all_dep_atom.cc  all_dep_atom.hh  all_masked_error.cc  all_masked_error.hh  always_enabled_dependency_label-fwd.hh  always_enabled_dependency_label.cc  always_enabled_dependency_label.hh  ambiguous_package_name_error.cc  ambiguous_package_name_error.hh  any_dep_atom.cc  any_dep_atom.hh  attributes.cc  attributes.hh  bad_version_spec_error.cc  bad_version_spec_error.hh  block_dep_atom.cc  block_dep_atom.hh  block_error.cc  block_error.hh  broken_linkage_configuration.cc  broken_linkage_configuration.hh  broken_linkage_configuration_TEST.cc  (+805 more)
pkg-config/: CMakeLists.txt  Makefile.am  paludis.pc.cmake  paludis.pc.in
python/: CMakeLists.txt  Makefile.am  about.cc  action.cc  action_TEST.py  additional_tests.cc  additional_tests.hh  additional_tests_so.cc  choices.cc  choices_TEST.py  choices_TEST_cleanup.sh  choices_TEST_setup.sh  contents.cc  contents_TEST.py  dep_label.cc  dep_label_TEST.py  dep_list.cc  dep_list_TEST.py  dep_list_TEST_cleanup.sh  dep_list_TEST_setup.sh  dep_spec.cc  dep_spec.hh  dep_spec_TEST.py  dep_tag.cc  dep_tag_TEST.py  eapi.cc  eapi_TEST.py  environment.cc  environment_TEST.py  environment_TEST_cleanup.sh  environment_TEST_setup.sh  exception.cc  exception.hh  filter.cc  filter_TEST.py  filtered_generator.cc  filtered_generator_TEST.py  formatter.cc  formatter_TEST.py  fs_entry.cc  (+66 more)
ruby/: CMakeLists.txt  Makefile.am  action.cc  action_TEST.rb  action_TEST_cleanup.sh  action_TEST_setup.sh  check.cc  check_TEST.rb  check_TEST_cleanup.sh  check_TEST_setup.sh  check_result.cc  check_result_TEST.rb  choice.cc  choice_TEST.rb  choice_TEST_cleanup.sh  choice_TEST_setup.sh  contents.cc  contents_TEST.rb  create_ruby_doc.rb  default_environment.cc  default_environment_TEST.rb  default_environment_TEST_cleanup.sh  default_environment_TEST_setup.sh  dep_atom.cc  dep_atom_TEST.rb  dep_label.cc  dep_label_TEST.rb  dep_list.cc  dep_list_TEST.rb  dep_list_TEST_cleanup.sh  dep_list_TEST_setup.sh  dep_spec.cc  dep_spec_TEST.rb  dep_spec_TEST_cleanup.sh  dep_spec_TEST_setup.sh  dep_tag.cc  dep_tag_TEST.rb  dep_tag_TEST_cleanup.sh  dep_tag_TEST_setup.sh  eapi.cc  (+71 more)
src/: CMakeLists.txt  Makefile.am  applets.cc  applets.hh  check_deps_exist.cc  colour.cc  colour.hh  command_line.cc  command_line.hh  console_install_task.cc  console_install_task.hh  contents.cc  exception_TEST  find_self_circular_dependencies.cc  help_TEST  install.cc  install.hh  install_TEST_cleanup.sh  install_TEST_setup.sh  licence.hh  list.cc  list.hh  list_repositories.cc  list_repositories.hh  list_repository_formats_TEST  list_sync_formats_TEST  news.cc  news.hh  owner.cc  paludis.cc  query.cc  query.hh  sync.cc  sync.hh  uninstall.cc  uninstall.hh  upgrade_TEST_setup.sh  use.cc  use_flag_pretty_printer.cc  use_flag_pretty_printer.hh  (+1 more)
(+3630 files in other folders)
